<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sub_title_main_activity">My Nanodegree Apps!</string>

    <!-- Labels -->
    <string name="label_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="label_scores_app">SCORES APP</string>
    <string name="label_library_app">LIBRARY APP</string>
    <string name="label_build_it_bigger">BUILD IT BIGGER</string>
    <string name="label_xyz_reader">XYZ READER</string>
    <string name="label_capstone">CAPSTONE: MY OWN APP</string>

    <!-- Messages -->
    <string name="msg_toast_apps">This button will be launch</string>
</resources>
