<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sub_title_margin_bottom"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sub_title_main_activity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/button_first_app"
        android:text="@string/label_spotify_streamer"
        android:layout_below="@+id/textView"
        android:onClick="sendMessage"
        style="@style/button_app"/>

    <Button android:id="@+id/button_second_app"
        android:text="@string/label_scores_app"
        android:layout_below="@+id/button_first_app"
        android:onClick="sendMessage"
        style="@style/button_app"/>

    <Button android:id="@+id/button_third_app"
        android:text="@string/label_library_app"
        android:layout_below="@+id/button_second_app"
        android:onClick="sendMessage"
        style="@style/button_app"/>

    <Button android:id="@+id/button_quarter_app"
        android:text="@string/label_build_it_bigger"
        android:layout_below="@+id/button_third_app"
        android:onClick="sendMessage"
        style="@style/button_app"/>

    <Button android:id="@+id/button_fifth_app"
        android:text="@string/label_xyz_reader"
        android:layout_below="@+id/button_quarter_app"
        android:onClick="sendMessage"
        style="@style/button_app"/>

    <Button android:id="@+id/button_my_app"
        android:background="@color/cyan_a700"
        android:text="@string/label_capstone"
        android:layout_below="@+id/button_fifth_app"
        android:onClick="sendMessage"
        style="@style/button_app" />

</RelativeLayout>
